--- a/src/app/views/emails/layouts/cancellation.hbs
+++ b/src/app/views/emails/layouts/cancellation.hbs
@@ -53,35 +53,18 @@
                                 <div
                                   style="color:#737f8d;font-family:Whitney,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;font-size:16px;line-height:24px;text-align:left">
 
-                                  {{> bemvindo}}
-
                                   {{{ body }}}
 
                                 </div>
                               </td>
                             </tr>
-                            <tr>
-                              <td style="word-break:break-word;font-size:0px;padding:10px 25px;padding-top:20px"
-                                align="center">
-                                <table role="presentation" cellpadding="0" cellspacing="0"
-                                  style="border-collapse:separate" align="center" border="0">
-                                  <tbody>
-                                    <tr>
-                                      <td style="border:none;border-radius:3px;color:white;padding:10px 19px"
-                                        align="center" valign="middle" bgcolor="#43b581">
-                                        {{> component-with-a-link }}
-                                      </td>
-                                    </tr>
-                                  </tbody>
-                                </table>
-                              </td>
-                            </tr>
+
 
                             <tr>
                               <td style="word-break:break-word;font-size:0px;padding:0px" align="left">
                                 <div
                                   style="color:#737f8d;font-family:Whitney,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;font-size:16px;line-height:24px;text-align:left">
-                                  {{> footer }}
+                                  {{> footer_cancel }}
                                 </div>
                               </td>
                             </tr>
@@ -94,7 +77,7 @@
                               <td style="word-break:break-word;font-size:0px;padding:0px" align="left">
                                 <div
                                   style="color:#747f8d;font-family:Whitney,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;font-size:13px;line-height:16px;text-align:left">
-                                  <p>Faça seus agendamentos com praticidade! esta errado</p>
+                                  <p>Faça seus agendamentos com praticidade!</p>
                                 </div>
                               </td>
                             </tr>
